--- a/generator/generator.yml
+++ b/generator/generator.yml
@@ -41,6 +41,7 @@ modules:
     walk:
     - 1.3.6.1.4.1.318.1.1.32
     lookups:
+      # pduNamePlateIndex
       - source_indexes: [pduNamePlateIndex]
         lookup: pduNamePlateName
         drop_source_indexes: true
@@ -49,6 +50,9 @@ modules:
         drop_source_indexes: true
       - source_indexes: [pduNamePlateIndex]
         lookup: pduNamePlateIPAddress
+        drop_source_indexes: true
+      - source_indexes: [pduNamePlateIndex]
+        lookup: "pduNamePlateInetAddressType"
         drop_source_indexes: true
       - source_indexes: [pduNamePlateIndex]
         lookup: pduNamePlateInetNetMask
@@ -62,7 +66,40 @@ modules:
       - source_indexes: [pduNamePlateIndex]
         lookup: pduNamePlateModelNumber
         drop_source_indexes: true
-
+      - source_indexes: [pduNamePlateIndex]
+        lookup: pduNamePlateIPAddress
+        drop_source_indexes: true
+      - source_indexes: [pduNamePlateIndex]
+        lookup: "pduNamePlateInetGateway"
+        drop_source_indexes: true
+      # pduEhandleIndex
+      - source_indexes: [pduEhandleIndex]
+        lookup: pduEhandleHwVer
+        drop_source_indexes: true
+      - source_indexes: [pduEhandleIndex]
+        lookup: pduEhandleFwVer
+        drop_source_indexes: true
+      - source_indexes: [pduEhandleIndex]
+        lookup: pduEhandleUserPinLength
+        drop_source_indexes: true
+      - source_indexes: [pduEhandleIndex]
+        lookup: "pduEhandleAutoLockTime" 
+        drop_source_indexes: true
+      - source_indexes: [pduEhandleIndex]
+        lookup: "pduEhandleUserPinMode" 
+        drop_source_indexes: true
+#"pduEhandleSerial"
+#"pduEhandleMechanicalLock" 
+#"pduEhandleDoorOpenTime" { 
+#"pduEhandleMaxDoorOpenTime"
+#"pduEhandleAisleControl" { 
+#"pduEhandleAisle" { label:{
+#"pduEhandleHandleOperation"
+    overrides:
+      pduEhandleIndex:
+        ignore: true
+      pduNamePlateIndex:
+        ignore: true
 # APC/Schneider UPS Network Management Cards
 #
 # Note: older management cards only support SNMP v1 (AP9606 and
